feat: 工具安全 + 调度租约 + 线程池重构 + 自我进化加固 + 启动自检 + OneBot 回执
工具安全（第三阶段核心）
- SendGroupTool 增加群白名单校验
- SendPrivateTool/LearnKnowledgeTool/RememberFactTool/ScheduleEventTool
  移除可由 LLM 伪造的 user_id 参数，改为从运行时上下文注入
- ReminderHandler 移除硬编码 ADMIN_USERS，改为读 BotConfig.getAdminQq()
- BaiLianService 工具列表同步更新构造函数

调度租约（第一阶段 1.2）
- LongTermMemoryRepository/RecurringTaskRepository
  新增 claimDueEvent/claimDueTask/releaseEventClaim/releaseTaskClaim
- DatabaseConfig 新增 trigger_claimed_at/fire_claimed_at 列迁移
- BotBootstrap 定时任务扫描改为
  claim → 提交到 conversationExecutor → 失败 release → 成功 markTriggered/markFired

线程池架构（第一阶段 1.3 前置）
- GroupSerialExecutor 从每群独立 ExecutorService 改为
  共享 worker 池 + 每群有界队列 100 + 私聊独立线程池 200
- InMemoryConversationStateStore 反应历史改 Deque + synchronized
- 新增 GroupSerialExecutorTest（同群不并发、不同群可并行）

自我进化加固
- SelfEvolveTool 加 ReentrantLock 防止并发进化
- 命令执行改 CompletableFuture + 30s 超时 + 退出码检查
- 沙箱打包改从 sandboxRoot/target 读 JAR（修复 projectRoot 误读 bug）
- Windows 额外部署到 projectRoot/target/

启动自检 + Dashboard 鉴权（第五阶段部分）
- DatabaseConfig 数据库连接失败/迁移失败改为 throw
  IllegalStateException，机器人拒绝以不完整 schema 启动
- WebDashboardListener 非本机监听未配 DASHBOARD_TOKEN 拒绝启动
- WebDashboard 鉴权支持 X-Dashboard-Token header，默认 host 改为 127.0.0.1

OneBot 回执（第一阶段 1.1）
- Main.java 新增 sendWithReceipt 私有方法复用 callOneBotApi 的 echo+Future 机制
- sendGroupReply/sendPrivateReply/sendReply 改为先等 OneBot 回执
  （status=ok && retcode==0）再持久化
- 5s 兜底超时，超时/回执失败不写库、不记运行时上下文

其他
- BaiLianService 多个并发修复：Deque 替代 List + synchronized(history)
- BaiLianService 删除冗余 recordGroupContext 调用和完整请求体日志
- AIHandler 微调 fast path 和普通 path 的上下文记录
- MessageService 接入 UserRepository 维护用户消息计数